After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 757919 - Key bindings to change buffer do not work when inside a terminal
Key bindings to change buffer do not work when inside a terminal
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: editor
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-11-10 23:19 UTC by Thibault Saunier
Modified: 2017-11-30 22:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
workbench: initialize global keybindings from workbench (3.72 KB, patch)
2017-11-30 22:47 UTC, Christian Hergert
committed Details | Review

Description Thibault Saunier 2015-11-10 23:19:17 UTC
When inside a terminal doing <ctr>1 or <ctr>pageUp/down or :bNext does not work.
Comment 1 Philip Withnall 2016-08-14 12:52:10 UTC
Which means that you have to mouse up to the document changing popover, select the document you want, then click outside it again to close the popover in order to switch back from the terminal to a document. That's quite laborious and annoying.

gnome-builder 3.20.4
Comment 2 Philip Withnall 2017-01-20 12:12:50 UTC
Also: Ctrl+K to bring up the open file list doesn’t work while in a terminal.
Comment 3 Philip Withnall 2017-11-30 14:43:24 UTC
With Builder 3.26.2, pressing Ctrl+. in a terminal no longer focuses the search entry, which is fairly annoying.
Comment 4 Christian Hergert 2017-11-30 22:47:02 UTC
Created attachment 364703 [details] [review]
workbench: initialize global keybindings from workbench

This code went through some refactoring in master, so this is just a
minimal backport to ensure they activate from the older design in 3.26.

Having these defined at the application layer would not ensure they could
hook activation before the event was dispatched to the target widget.
Comment 5 Christian Hergert 2017-11-30 22:48:01 UTC
Thanks, i did a lot of cleanup to fix this on master, so here is a minimal
backport.

Attachment 364703 [details] pushed as dcc9230 - workbench: initialize global keybindings from workbench