workbench: initialize global keybindings from workbench

This code went through some refactoring in master, so this is just a
minimal backport to ensure they activate from the older design in 3.26.

Having these defined at the application layer would not ensure they could
hook activation before the event was dispatched to the target widget.

https://bugzilla.gnome.org/show_bug.cgi?id=757919